# solvomatic

./: Cargo.toml  README.md
examples/: apples-plus-bananas-equations.txt  apples-plus-bananas-plus.txt  apples-plus-bananas.rs  jigsaw_sudoku.rs  magic-square.rs  palindrome.rs  sudoku.rs  textual.rs  three.rs  word-square.rs
examples/input/: regions_1.txt  regions_2.txt  regions_3.txt  regions_4.txt  regions_5.txt  regions_6.txt  regions_7.txt  regions_8.txt  regions_9.txt  sudoku_1.txt  sudoku_2.txt  sudoku_3.txt  sudoku_4.txt  sudoku_5.txt  sudoku_6.txt  sudoku_7.txt  sudoku_8.txt  sudoku_9.txt
examples/textual/: display_sudoku.py  palindrome.txt  pyramid.txt
puzzles/: evil-sudoku.txt  hardest-sudoku.txt  jigsaw-sudoku-2.txt  jigsaw-sudoku-9.txt  magic-hexagon.txt  magic-square.txt  palindrome.txt  word-pyramid.txt  word-square.txt  x.txt  y.txt
src/: guessing_solver.rs  lib.rs  main.rs  main.rs.bak  scratch.txt  state.rs  table.rs
src/constraints/: count.rs  equal.rs  mod.rs  permutation.rs  pred.rs  prod.rs  seq.rs  sum.rs
src/rules/: bag.rs  mod.rs  prod.rs  sum.rs
