[package]
name = "solvomatic"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]
bitvec = "1.*"
argh = "0.1"
rayon = "1.8"
termsize = "0.1"
parser-ll1 = { git = "https://github.com/justinpombrio/parser-ll1" }
